some changes, fix 4+ time, add mobile

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         margin-right: 6px;
         flex:0 0 auto;
         transition: .2s;
+        margin-bottom: 6px;
       }
 
       .intervalText:hover {
@@ -54,6 +55,7 @@
 
       .sectora {
         display: flex;
+        flex-wrap: wrap;
       }
 
       .tab-content {
