--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
         }
       }
 
+      .d-none {
+        display: none !important;
+      }
+
       .intervalText {
         padding: 0px 14px;
         height: 48px;
@@ -131,7 +135,7 @@
       </div>
     </div>
 
-    <div class="accordion" id="accordionExample">
+    <div class="accordion d-none" id="accordionExample">
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingOne">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
