fix src scripts

--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
   </div>
 </footer>
 
-  <script src="/assets/dist/js/popper.min.js"></script>
-  <script src="/assets/dist/js/bootstrap.min.js"></script>
-  <script src="/assets/dist/js/main.js"></script>
+  <script src="assets/dist/js/popper.min.js"></script>
+  <script src="assets/dist/js/bootstrap.min.js"></script>
+  <script src="assets/dist/js/main.js"></script>
       
   </body>
 </html>
