--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
         <li class="nav-item" role="presentation">
           <button class="btn btn-outline-dark w-100" onclick="getIntervals('Sever')" id="pills-sever-tab" data-bs-toggle="pill" data-bs-target="#pills-sever" type="button" role="tab" aria-controls="pills-sever" aria-selected="false">ИМ Север</button>
         </li>
+        <li class="nav-item" role="presentation">
+          <button class="btn btn-outline-dark w-100" onclick="getIntervals('Noginsk')" id="pills-noginsk-tab" data-bs-toggle="pill" data-bs-target="#pills-noginsk" type="button" role="tab" aria-controls="pills-noginsk" aria-selected="false">ИМ Ногинск</button>
+        </li>
       </ul>
     </div>
   </div>
@@ -57,6 +60,11 @@
           </div>
           <div class="tab-pane fade" id="pills-sever" role="tabpanel" aria-labelledby="pills-sever-tab">
             <div class="result row mb-4" id="reusltBlock-Sever">
+              
+            </div>
+          </div>
+          <div class="tab-pane fade" id="pills-noginsk" role="tabpanel" aria-labelledby="pills-noginsk-tab">
+            <div class="result row mb-4" id="reusltBlock-Noginsk">
               
             </div>
           </div>
