--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
   <script src="assets/dist/js/popper.min.js"></script>
   <script src="assets/dist/js/bootstrap.min.js"></script>
-  <script src="assets/dist/js/main.js"></script>
+  <script src="assets/dist/js/main.js?2323"></script>
       
   </body>
 </html>
