--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <div class="position-relative overflow-hidden p-3 p-md-5 mb-3 text-center bg-light">
     <div class="col-12 col-md-8 p-lg-5 mx-auto my-5" id="bannerContent">
       <h1 class="display-4 fw-normal">Автоматическая проверка интервалов</h1>
-      <p class="lead fw-normal">Проверка осуществляется по заранее заданным адресам, они вместе с номером сектора выводятся заранее. Остальное подгружается с севрера.</p>
+      <p class="lead fw-normal">Проверка осуществляется по заранее заданным адресам, они вместе с номером сектора выводятся заранее. Остальное подгружается с сервера.</p>
       <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
         <li class="nav-item" role="presentation">
           <button class="btn btn-outline-dark w-100" onclick="getIntervals('Vostok')" id="pills-vostok-tab" data-bs-toggle="pill" data-bs-target="#pills-vostok" type="button" role="tab" aria-controls="pills-vostok" aria-selected="true">ИМ Восток</button>
@@ -76,14 +76,14 @@
 <footer class="container py-5">
   <div class="row">
     <div class="col-12 col-md">
-      <small class="d-block mb-3 text-muted">&copy; 2024 сделано <a href="https://t.me/rhtfl" target="_blank">Даней</a> с любовью</small>
+      <small class="d-block mb-3 text-muted">&copy; 2025 сделано <a href="https://t.me/killymon" target="_blank">Даней</a> с любовью</small>
     </div>
   </div>
 </footer>
 
   <script src="assets/dist/js/popper.min.js"></script>
   <script src="assets/dist/js/bootstrap.min.js"></script>
-  <script src="assets/dist/js/main.js?2323"></script>
+  <script src="assets/dist/js/main.js?42345"></script>
       
   </body>
 </html>
